# all-pi-c

./: README.md  vol-led.c
37-temp/: 37-temp  37-temp.c  Makefile
4x4x4/: Makefile  read.sh
85.d/curs-in/: Makefile  curs-in  curs-in.c  curses-analog.c  pcf8574.c
85.d/led-clock/: pcf.c
85.d/lights/: Makefile  bak.lights.c  lights  lights.c  pcf8574
85.d/new/: new  new.c  off  off.c
85.d/pcf-in/: Makefile  pcf-in  pcf-in.c
85.d/pcf-toggle/: Makefile  pcf-toggle  pcf-toggle.c
LM76/: LM76  LM76.c  LM76.h  LM76.py  Makefile  orig-LM76.c
MPU6050-Pi-Demo/: Makefile  demo_3d  demo_raw  demo_raw_lcd  demo_raw_lcd.cpp  test_3d
analog.d/ana/: Makefile  ana  ana.c  ana2.c  mis-ana.c
analog.d/ana-meter/: CUR.c  Makefile  ana-meter  ana-meter.c
analog.d/ana-temp/: Makefile  ana-temp.c  curses-analog  f  f.c  m  m.c
analog.d/battery/: Makefile  battery  battery.c
analog.d/curs-temp/: Makefile  temp  temp.c
analog.d/curses-analog/: curses-analog  curses-analog.c
analog.d/curses-i2c-analog/: Makefile  curses-i2c-analog  curses-i2c-analog.c
analog.d/i2c-analog/: i2c-analog  i2c-analog.c
analog.d/lcd-i2c/: lcd-i2c  lcd-i2c.c
analog.d/ldr/: Makefile  ldr  ldr.c  temp
analog.d/led-16-i2c/: Makefile  led-16-i2c
analog.d/led-i2c/: Makefile  led-i2c  led-i2c.c
analog.d/misc/: bar  bar.c  fu.c  gpio_fun.sh  lights.c  old-bar  pcf-up-down.sh  pcfdown.sh  pcfup.sh
analog.d/temp/: temp.c
analog.d/volt/: Makefile  volt  volt.c
ard.d/ard-servo/: Makefile  ard-servo  ard-servo.c
ard.d/arduino-get_temp/: Makefile  get_temp.c
bcm.d/PCF8574/: pcf8574.c
bcm.d/avoid/: Makefile  avoid  avoid.c
bcm.d/t/: t  t.c
cgps/: cgps.c  lat_lon  lat_long  lcd-gps.c  new.cgps.c
cpu_fan/: Makefile  cpu_fan
digit/: but.c  digit2  digit2.c  test.pl
dvk511.d/Push_Buttons_JOYSTICK/: key.c
dvk511.d/buzz/: Makefile  buz_pwm  buz_pwm.c
dvk511.d/buzz_stop/: Makefile  buzz_stop  buzz_stop.c
dvk511.d/pcf8574-analog/: pcf8574
dvk511.d/spi-mem/: Makefile  at45db  at45db.c  spi-mem  spi-mem.c
etch.d/ana-etch/: Makefile  a.c  ana-etch  ana-etch.c  curses-analog.c
etch.d/but-etch/: Makefile  sonic.c  (+1 more)
face_recognition/: camcv_vid1.cpp
gyro_mpu6050/: demo_3d.cpp  demo_dmp
hall/: Makefile  hall
hd/: Makefile  hddledPi  hddledPi.c
i2c.d/: bounce.c
line/: Makefile  __LINE__.c  line  line.c
mastermind/: Makefile  mastermind  mastermind.c  mastermind.h  mastermind_four.ino  pass.c  print_keypad.c
matrix/: matrix  matrix.c  off.sh
mp3-player/: oled.d
mp3-player/SPECTRUMled/i2c_spi_chips-0.0/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
mp3-player/SPECTRUMled/i2c_spi_chips-0.0/PCD8544_RPi_BBSPI/: README.md
mp3-player/SPECTRUMled/i2c_spi_chips-0.0/common/: Makefile  Makefile.am  Makefile.in  PCD8544_font.h  font.h  glcd_fonttools.c  glcd_fonttools.h  glcd_xbmtools.c  glcd_xbmtools.h  i2c_chips.c  i2c_chips.h  i2c_wraps.c  i2c_wraps.h  jace128.h  lcd_disptools.c  lcd_disptools.h  led_disptools.c  led_disptools.h  oled128.h  oled256.h  parsel.c  parsel.h  pigpio_wraps.c  pigpio_wraps.h  pigpiod_wraps.c  pigpiod_wraps.h  rcs_scm.h  spi_PCD8544.c  spi_PCD8544.h  spi_chips.c  spi_chips.h  spi_wraps.c  spi_wraps.h
mp3-player/SPECTRUMled/i2c_spi_chips-0.0/common/.deps/: glcd_fonttools.Po  glcd_xbmtools.Po  i2c_chips.Po  i2c_wraps.Po  lcd_disptools.Po  led_disptools.Po  parsel.Po  pigpio_wraps.Po  pigpiod_wraps.Po  spi_PCD8544.Po  spi_chips.Po  spi_wraps.Po
mp3-player/SPECTRUMled/i2c_spi_chips-0.0/src/: Makefile  Makefile.am  Makefile.in  demo  demo.c  dual_lcd_i2c4-8bit_demo  dual_lcd_i2c4-8bit_demo.c  glcd_font_tool  glcd_font_tool.c  glcd_serial_demo  glcd_serial_demo.c  glcd_spi8bA_demo  glcd_spi8bA_demo.c  glcd_spi8b_demo  glcd_spi8b_demo.c  i2c_clkled_demo  i2c_clkled_demo.c  i2c_ledx_demo  i2c_ledx_demo.c  i2c_mxledx_demo  i2c_mxledx_demo.c  i2c_rgb_led_demo  i2c_rgb_led_demo.c  lcd_demo  lcd_demo.c  lcd_fi2c_demo  lcd_fi2c_demo.c  lcd_gpio4bV2_demo  lcd_gpio4bV2_demo.c  lcd_gpio4b_demo  lcd_gpio4b_demo.c  lcd_hi2c_demo  lcd_hi2c_demo.c  lcd_ibo_i2c_demo  lcd_ibo_i2c_demo.c  lcd_mi2c_demo  lcd_mi2c_demo.c  lcd_spi4bV2_demo  lcd_spi4bV2_demo.c  lcd_spi4b_demo  (+29 more)
mp3-player/SPECTRUMled/i2c_spi_chips-0.0/src/.deps/: demo-demo.Po  dual_lcd_i2c4_8bit_demo-dual_lcd_i2c4-8bit_demo.Po  glcd_font_tool-glcd_font_tool.Po  glcd_serial_demo-glcd_serial_demo.Po  glcd_spi8bA_demo-glcd_spi8bA_demo.Po  glcd_spi8b_demo-glcd_spi8b_demo.Po  i2c_clkled_demo-i2c_clkled_demo.Po  i2c_ledx_demo-i2c_ledx_demo.Po  i2c_mxledx_demo-i2c_mxledx_demo.Po  i2c_rgb_led_demo-i2c_rgb_led_demo.Po  lcd_demo-lcd_demo.Po  lcd_fi2c_demo-lcd_fi2c_demo.Po  lcd_gpio4bV2_demo-lcd_gpio4bV2_demo.Po  lcd_gpio4b_demo-lcd_gpio4b_demo.Po  lcd_hi2c_demo-lcd_hi2c_demo.Po  lcd_ibo_i2c_demo-lcd_ibo_i2c_demo.Po  lcd_mi2c_demo-lcd_mi2c_demo.Po  lcd_spi4bV2_demo-lcd_spi4bV2_demo.Po  lcd_spi4b_demo-lcd_spi4b_demo.Po  lcd_spi8b_demo-lcd_spi8b_demo.Po  lcd_structures_list-lcd_structures_list.Po  oled_i2c_demo-oled_i2c_demo.Po  oled_spiV2_demo-oled_spiV2_demo.Po  oled_spi_demo-oled_spi_demo.Po  spi_glcdHP3_demo-spi_glcdHP3_demo.Po  spi_glcdV2N_demo-spi_glcdV2N_demo.Po  spi_glcdV2_demo-spi_glcdV2_demo.Po  spi_glcd_cacc_demo-spi_glcd_cacc_demo.Po  spi_glcd_demo-spi_glcd_demo.Po  spi_led_2x4d_demo-spi_led_2x4d_demo.Po  spi_led_4dq_demo-spi_led_4dq_demo.Po  spi_led_4drrg_demo-spi_led_4drrg_demo.Po  spi_ledx_demo-spi_ledx_demo.Po
mp3-player/SPECTRUMled/i2c_spi_chips-0.0/xbm_data/: GDTST128x64.xbm  GDTST128x64_16c.xbm  GDTST48x84.xpm  GDTST48x84_mtpaint.xpm  arrow.xbm  arrow48x84.xpm  arrow48x84_mtpaint.xpm  arrow_mtpaint.xpm  cgram00.xpm  cgram02.xpm  cgram04.xpm  cgram06.xpm  raspberry_64x64.xbm  raspberryx2_128x64.xbm  raspberryx2_128x64.xpm  scratch.xbm  scratch.xpm
oled.d/: oled-msg.py  os.py  subprocess-test.py  terminal.py  type.py
rotary-encoder.d/: flash-led.c  led-16-i2c.c
shift.d/: rotary  rotary.c  shift_reg_pins.h
uinput/: Makefile  new-working-uinput.c  orig-uinput  orig-uinput.c  safe-uinput.c  t  t.c  uinput  uinput.c  working-uinput.c
(+697 files in other folders)
