## Process this file with automake to produce Makefile.in
noinst_LIBRARIES = libparsel.a libi2c_chips.a libi2c_wraps.a libled_disptools.a \
liblcd_disptools.a libspi_chips.a libspi_wraps.a libspi_PCD8544.a libglcd_xbmtools.a \
libpigpio_wraps.a libpigpiod_wraps.a libglcd_fonttools.a
libparsel_a_SOURCES = parsel.h parsel.c
libi2c_chips_a_SOURCES = i2c_chips.h i2c_chips.c
libi2c_wraps_a_SOURCES = i2c_wraps.h i2c_wraps.c
libled_disptools_a_SOURCES = led_disptools.h led_disptools.c
liblcd_disptools_a_SOURCES = i2c_chips.h i2c_chips.c spi_chips.h spi_chips.c \
lcd_disptools.h lcd_disptools.c
libspi_chips_a_SOURCES = spi_chips.h spi_chips.c 
libspi_wraps_a_SOURCES = spi_wraps.h spi_wraps.c 
libspi_PCD8544_a_SOURCES = i2c_wraps.h i2c_wraps.c spi_chips.h spi_chips.c \
spi_wraps.h spi_wraps.c PCD8544_font.h spi_PCD8544.h spi_PCD8544.c glcd_xbmtools.h
libglcd_xbmtools_a_SOURCES = parsel.h parsel.c glcd_xbmtools.h glcd_xbmtools.c
libpigpio_wraps_a_SOURCES = pigpio_wraps.h pigpio_wraps.c 
libpigpiod_wraps_a_SOURCES = pigpiod_wraps.h pigpiod_wraps.c 
libglcd_fonttools_a_SOURCES = parsel.h parsel.c glcd_fonttools.h glcd_fonttools.c
